// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuperUpdateButton is rendered 1`] = `
<EuiToolTip
  delay="regular"
  position="bottom"
>
  <EuiButton
    className="euiSuperUpdateButton"
    color="primary"
    fill={true}
    iconSide="left"
    iconType="refresh"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    size="m"
    textProps={
      Object {
        "className": "euiSuperUpdateButton__text",
      }
    }
    type="button"
  >
    <EuiI18n
      default="Refresh"
      token="euiSuperUpdateButton.refreshButtonLabel"
    />
  </EuiButton>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton isDisabled 1`] = `
<EuiToolTip
  content={
    <EuiI18n
      default="Cannot update"
      token="euiSuperUpdateButton.cannotUpdateTooltip"
    />
  }
  delay="regular"
  position="bottom"
>
  <EuiButton
    className="euiSuperUpdateButton"
    color="primary"
    fill={true}
    iconSide="left"
    iconType="refresh"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    size="m"
    textProps={
      Object {
        "className": "euiSuperUpdateButton__text",
      }
    }
    type="button"
  >
    <EuiI18n
      default="Refresh"
      token="euiSuperUpdateButton.refreshButtonLabel"
    />
  </EuiButton>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton isLoading 1`] = `
<EuiToolTip
  delay="regular"
  position="bottom"
>
  <EuiButton
    className="euiSuperUpdateButton"
    color="secondary"
    fill={true}
    iconSide="left"
    iconType="kqlFunction"
    isDisabled={false}
    isLoading={true}
    onClick={[Function]}
    size="m"
    textProps={
      Object {
        "className": "euiSuperUpdateButton__text",
      }
    }
    type="button"
  >
    <EuiI18n
      default="Updating"
      token="euiSuperUpdateButton.updatingButtonLabel"
    />
  </EuiButton>
</EuiToolTip>
`;

exports[`EuiSuperUpdateButton needsUpdate 1`] = `
<EuiToolTip
  content={
    <EuiI18n
      default="Click to apply"
      token="euiSuperUpdateButton.clickToApplyTooltip"
    />
  }
  delay="regular"
  position="bottom"
>
  <EuiButton
    className="euiSuperUpdateButton"
    color="secondary"
    fill={true}
    iconSide="left"
    iconType="kqlFunction"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    size="m"
    textProps={
      Object {
        "className": "euiSuperUpdateButton__text",
      }
    }
    type="button"
  >
    <EuiI18n
      default="Update"
      token="euiSuperUpdateButton.updateButtonLabel"
    />
  </EuiButton>
</EuiToolTip>
`;
